B-F Backup Sandbox 30.4.12/src/objects/Wholesaler_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Wholesaler</label>
        <referenceTo>Account_Wholesaler__c</referenceTo>
        <relationshipLabel>Wholesaler Products</relationshipLabel>
        <relationshipName>Wholesaler_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Denominator_for_conversion__c</fullName>
        <description>UOM Conversion Denominator (From Vistex)</description>
        <inlineHelpText>UOM Conversion Denominator (From Vistex)</inlineHelpText>
        <label>Denominator for conversion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_the_Material_Provided__c</fullName>
        <description>Distributor&apos;s Material description (From Vistex)</description>
        <inlineHelpText>Distributor&apos;s Material description (From Vistex)</inlineHelpText>
        <label>Description of the Material Provided</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <description>ECC Material Description (From Vistex via ECC)</description>
        <inlineHelpText>ECC Material Description (From Vistex via ECC)</inlineHelpText>
        <label>Material Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Numerator_for_conversion__c</fullName>
        <description>UOM Conversion Numerator (From Vistex)</description>
        <inlineHelpText>UOM Conversion Numerator (From Vistex)</inlineHelpText>
        <label>Numerator for conversion</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Distributor Partner type in ECC</description>
        <label>Partner Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Wholesaler Products</relationshipLabel>
        <relationshipName>Wholesaler_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <description>SAP Material Number</description>
        <inlineHelpText>SAP Material Number</inlineHelpText>
        <label>SAP Material Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure_Provided__c</fullName>
        <description>UOM provided by Distributor (Coming in from Vistex)</description>
        <inlineHelpText>UOM provided by Distributor (Coming in from Vistex)</inlineHelpText>
        <label>Unit of Measure Provided</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_measure_determined__c</fullName>
        <description>Unit of measure determined (From Vistex)</description>
        <inlineHelpText>Unit of measure determined (From Vistex)</inlineHelpText>
        <label>Unit of measure determined</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Valid From (Feed From Vistex)</description>
        <inlineHelpText>Valid From (Feed From Vistex)</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Valid To (Feed From Vistex)</description>
        <inlineHelpText>Valid To (Feed From Vistex)</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Name__c</fullName>
        <formula>Account_Wholesaler__r.Wholesaler_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Number__c</fullName>
        <description>The ECC Wholesaler  Account Number - From the Wholesaler (Object)</description>
        <formula>Wholesaler__r.SAP_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ECC Wholesaler  Account Number - From the Wholesaler (Object)</inlineHelpText>
        <label>Wholesaler Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Product_Number__c</fullName>
        <externalId>true</externalId>
        <label>Wholesaler Product Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <description>This the Account Wholesaler &quot;Key&quot; number</description>
        <inlineHelpText>This the Account Wholesaler &quot;Key&quot; number</inlineHelpText>
        <label>Wholesaler</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipLabel>Wholesaler Product&apos;s</relationshipLabel>
        <relationshipName>Wholesaler_Product_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wholesaler Product</label>
    <nameField>
        <label>Wholesaler Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesaler Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>